--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
           <header class="header preview_layer" >
 <div class="logo_wrapper">
-    <img src="/images/Logo.png" alt="Logo">
+    <img src="../images/Logo.png" alt="Logo">
 </div>
 <nav class="nav">
    <div class="nav_item"><a href="">Equipment</a></div>
