--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     
 </div>
 <div class="section_image1">
-    <img src="./images/01.png" alt="travel">
+    <img src="https://github.com/sssanta69/MNTN_travel/images/01.png" alt="travel">
 </div>
 </section>
 <section class="section">
