--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             What level of  hiker are you?
         </div>
         <div class="section_text">
-            Determining what level of hiker you are can be an important tool when planning future hikes. This hiking level guide will help you plan hikes according to different hike ratings set by various websites like All Trails and Modern Hiker. What type of hiker are you – novice, moderate, advanced moderate, expert, or expert backpacker? 
+            Determining what level of hiker you re can be an important tool when planning future hikes. This hiking level guide will help you plan hikes according to different hike ratings set by various websites like All Trails and Modern Hiker. What type of hiker are you – novice, moderate, advanced moderate, expert, or expert backpacker? 
         </div>
         <input type="button" value="Read more">
     
